# qml_learn

./: README.md
build-qml17-C_C_2024_03_15-Debug/: CMakeCache.txt.prev  Makefile  appqml17  appqml17_qmltyperegistrations.cpp  cmake_install.cmake
build-qml17-C_C_2024_03_15-Debug/.qt/: QtDeploySupport.cmake
build-qml17-C_C_2024_03_15-Debug/.qt/deploy_qml_imports/: appqml17.cmake
build-qml17-C_C_2024_03_15-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml17.rsp
build-qml17-C_C_2024_03_15-Debug/.rcc/: appqml17_raw_qml_0.qrc  qmake_qml17.qrc  qrc_appqml17_raw_qml_0.cpp  qrc_qmake_qml17.cpp
build-qml17-C_C_2024_03_15-Debug/.rcc/qmlcache/: appqml17_Main_qml.cpp  appqml17_qml_loader_file_list.rsp  appqml17_qmlcache_loader.cpp
build-qml17-C_C_2024_03_15-Debug/appqml17_autogen/EWIEGA46WW/: qrc_resources.cpp
build-qml17-C_C_2024_03_15-Debug/qml17/: appqml17_qml_module_dir_map.qrc  icon.rc  qmldir  resources.qrc
build-qml18-C_C_2024_03_16-Debug/: CMakeCache.txt.prev  Makefile  appqml18  appqml18_qmltyperegistrations.cpp  cmake_install.cmake  qtcsettings.cmake
build-qml18-C_C_2024_03_16-Debug/.qt/: QtDeploySupport.cmake
build-qml18-C_C_2024_03_16-Debug/.qt/deploy_qml_imports/: appqml18.cmake
build-qml18-C_C_2024_03_16-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml18.cmake  Qt6_QmlPlugins_Imports_appqml18.rsp
build-qml18-C_C_2024_03_16-Debug/.rcc/: appqml18_raw_qml_0.qrc  qmake_qml18.qrc  qrc_appqml18_raw_qml_0.cpp  qrc_qmake_qml18.cpp
build-qml18-C_C_2024_03_16-Debug/.rcc/qmlcache/: appqml18_Main_qml.cpp  appqml18_qml_loader_file_list.rsp  appqml18_qmlcache_loader.cpp
build-qml18-C_C_2024_03_16-Debug/appqml18_autogen/: moc_predefs.h
build-qml18-C_C_2024_03_16-Debug/appqml18_autogen/EWIEGA46WW/: qrc_resources.cpp
build-qml18-C_C_2024_03_16-Debug/qml18/: Main.qml  appqml18_qml_module_dir_map.qrc  qmldir
build-qml19-C_C_2024_03_16-Debug/: CMakeCache.txt  Makefile  appqml19  appqml19_qmltyperegistrations.cpp  cmake_install.cmake
build-qml19-C_C_2024_03_16-Debug/.qt/: QtDeploySupport.cmake
build-qml19-C_C_2024_03_16-Debug/.qt/deploy_qml_imports/: appqml19.cmake
build-qml19-C_C_2024_03_16-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml19.rsp
build-qml19-C_C_2024_03_16-Debug/.rcc/: appqml19_raw_qml_0.qrc  qmake_qml19.qrc  qrc_appqml19_raw_qml_0.cpp  qrc_qmake_qml19.cpp
build-qml19-C_C_2024_03_16-Debug/.rcc/qmlcache/: appqml19_About_qml.cpp  appqml19_EditProFile_qml.cpp  appqml19_Home_qml.cpp  appqml19_Main_qml.cpp  appqml19_PorFile_qml.cpp  appqml19_ProFile_qml.cpp  appqml19_qml_loader_file_list.rsp  appqml19_qmlcache_loader.cpp
build-qml19-C_C_2024_03_16-Debug/appqml19_autogen/EWIEGA46WW/: qrc_image.cpp
build-qml19-C_C_2024_03_16-Debug/qml19/: About.qml  Home.qml  Main.qml  PorFile.qml  ProFile.qml  appqml19_qml_module_dir_map.qrc  qmldir
build-qml19-C_C_2024_03_16-Debug/qmltypes/: appqml19_foreign_types.txt
build-qml20-C_C_2024_03_16-Debug/: CMakeCache.txt.prev  Makefile  appqml20  appqml20_qmltyperegistrations.cpp  cmake_install.cmake
build-qml20-C_C_2024_03_16-Debug/.qt/: QtDeploySupport.cmake
build-qml20-C_C_2024_03_16-Debug/.qt/deploy_qml_imports/: appqml20.cmake
build-qml20-C_C_2024_03_16-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml20.rsp
build-qml20-C_C_2024_03_16-Debug/.rcc/: appqml20_raw_qml_0.qrc  qmake_qml20.qrc  qrc_appqml20_raw_qml_0.cpp  qrc_qmake_qml20.cpp
build-qml20-C_C_2024_03_16-Debug/.rcc/qmlcache/: appqml20_About_qml.cpp  appqml20_EditProFile_qml.cpp  appqml20_Home_qml.cpp  appqml20_Main_qml.cpp  appqml20_ProFile_qml.cpp  appqml20_qml_loader_file_list.rsp  (+1 more)
build-qml20-C_C_2024_03_16-Debug/qml20/: EditProFile.qml  Main.qml  appqml20_qml_module_dir_map.qrc  qmldir
build-qml21-C_C_2024_03_16-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-qml21-C_C_2024_03_16-Debug/.qt/: QtDeploySupport.cmake
build-qml21-C_C_2024_03_16-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml21.rsp
build-qml21-C_C_2024_03_16-Debug/.rcc/: appqml21_raw_qml_0.qrc  qmake_qml21.qrc
build-qml21-C_C_2024_03_16-Debug/qml21/: Main.qml  appqml21_qml_module_dir_map.qrc  qmldir
build-qml22-C_C_2024_03_17-Debug/: CMakeCache.txt  Makefile  appqml22  appqml22_qmltyperegistrations.cpp  cmake_install.cmake  qtcsettings.cmake
build-qml22-C_C_2024_03_17-Debug/.qt/: QtDeploySupport.cmake
build-qml22-C_C_2024_03_17-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appqml22.cmake  Qt6_QmlPlugins_Imports_appqml22.rsp
build-qml22-C_C_2024_03_17-Debug/.rcc/: appqml22_raw_qml_0.qrc  qmake_qml22.qrc  qrc_appqml22_raw_qml_0.cpp  qrc_qmake_qml22.cpp
build-qml22-C_C_2024_03_17-Debug/appqml22_autogen/: moc_predefs.h
build-qml22-C_C_2024_03_17-Debug/qml22/: BlueBox.qml  Main.qml  appqml22_qml_module_dir_map.qrc  qmldir
build-qml22-C_C_2024_03_17-Debug/qmltypes/: appqml22_foreign_types.txt
common/: BlueBox.qml  GreenBox.qml
qml01/: qml01.qml  qml01.qmlproject
qml02/: qml02.qml
qml03/: qml03.qml
qml04/: MyButton.qml  qml04.qml  qml04.qmlproject
qml05/: ClickableImage.qml  qml05.qml
qml06/: BlueSquare.qml  DarkSquare.qml  GreenSquare.qml  RedSquare.qml  qml06.qml  qml06.qmlproject
qml07/: BlueSquare.qml  GreenSquare.qml  qml07.qml  qml07.qmlproject
qml08/: MyButton.qml  MyImages.qml  qml08.qml  qml08.qmlproject
qml09/: MyTextEdit.qml  MyTextInput.qml  qml09.qml  qml09.qmlproject
qml10/: qml10.qml  qml10.qmlproject
qml11/: ClickableImage.qml  qml11.qml  qml11.qmlproject
qml12/: EasingType.qml  qml12.qml  qml12.qmlproject
qml13/: ClickableImage.qml  qml13.qml  qml13.qmlproject
qml14/: qml14.qml  qml14.qmlproject
qml15/: qml15.qml  qml15.qmlproject
qml16/: Tab.qml  TabChild.qml  qml16.qml  qml16.qmlproject
qml17/: CMakeLists.txt  Main.qml  main.cpp
qml18/: CMakeLists.txt  Main.qml  icon.desktop  main.cpp
qml19/: CMakeLists.txt  main.cpp
qml20/: CMakeLists.txt  Main.qml  ProFile.qml  image.qrc  main.cpp
qml21/: CMakeLists.txt  Documentwindow.qml  Main.qml  main.cpp  resource.qrc
qml22/: CMakeLists.txt  Main.qml  main.cpp
qml23/: qml23.qml  qml23.qmlproject
qml24/: qml24.qml  qml24.qmlproject
(+130 files in other folders)
